--- a/ODEs_2.ipynb
+++ b/ODEs_2.ipynb
@@ -436,14 +436,12 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 33,
+      "execution_count": 44,
       "metadata": {
         "id": "KmKdGYQ_NjB8"
       },
       "outputs": [],
       "source": [
-        "import numpy as np\n",
-        "\n",
         "def orbit_solve (r0, v0, tmax, N, method = 'euler'):\n",
         "\n",
         "    # set-up the time-step using tmax and N: (N points mean N-1 intervals)\n",
@@ -481,14 +479,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 43,
+      "execution_count": 47,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 472
         },
         "id": "yfzVBxynNjB8",
-        "outputId": "cf020045-84f3-41de-8352-2a758c0d2dbb"
+        "outputId": "93cc8f37-e4a5-4948-cd12-b0842f35cb5f"
       },
       "outputs": [
         {
@@ -521,7 +519,9 @@
         "plt.ylabel(\"y position\")\n",
         "plt.title(\"2D orbit (Euler Method)\")\n",
         "plt.gca().set_aspect('equal', adjustable='box') # to make the circular orbit look circular\n",
-        "plt.show()"
+        "plt.show()\n",
+        "\n",
+        "# this is about what i expected"
       ]
     },
     {
@@ -542,7 +542,32 @@
         "id": "cgXNifzaNjB9"
       },
       "outputs": [],
-      "source": []
+      "source": [
+        "def orbit_solve (r0, v0, tmax, N, method = 'euler'):\n",
+        "\n",
+        "    # set-up the time-step using tmax and N: (N points mean N-1 intervals)\n",
+        "    time_step = tmax / (N - 1)\n",
+        "    # set up an array for the output times (using tmax, time-step and N):\n",
+        "    t = np.linspace(time_step, tmax, N)\n",
+        "    # set up arrays for the positions and velocities\n",
+        "    r = np.zeros((N,2)) # N rows (time step), 2 columns (x- and y-components)\n",
+        "    v = np.zeros((N,2)) # same shape for v\n",
+        "    # include the initial conditions in the arrays\n",
+        "    r[0] = np.array(r0)\n",
+        "    v[0] = np.array(v0)\n",
+        "    # then do the integration for all the integration points\n",
+        "    for i in range (0, N-1):\n",
+        "        # calculate acceleration a[i] based on current position r[i]\n",
+        "        a = (-G*M*r[i])/(r_mag**3)\n",
+        "        if method = 'euler': # create if statements for each of the 3 methods\n",
+        "          r[i+1] = r[i]+v[i]*time_step\n",
+        "          v[i+1] = v[i]+a*time_step\n",
+        "        if method = 'euler_cromer':\n",
+        "          v(i+1) = v[i]+a*time_step\n",
+        "          r(i+1) = r[i]+v[i]*time_step\n",
+        "    # output the solution (arrays for positions and velocities) versus time\n",
+        "    return t, r, v"
+      ]
     },
     {
       "cell_type": "markdown",
