--- a/ODEs_2.ipynb
+++ b/ODEs_2.ipynb
@@ -436,7 +436,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 44,
+      "execution_count": 48,
       "metadata": {
         "id": "KmKdGYQ_NjB8"
       },
@@ -459,8 +459,8 @@
         "        # calculate acceleration a[i] based on current position r[i]\n",
         "        a = (-G*M*r[i])/(r_mag**3)\n",
         "\n",
-        "        r[i+1] = r[i]+v[i]*time_step\n",
-        "        v[i+1] = v[i]+a*time_step\n",
+        "        r[i+1] = r[i] + v[i]*time_step\n",
+        "        v[i+1] = v[i] + a*time_step\n",
         "    # output the solution (arrays for positions and velocities) versus time\n",
         "    return t, r, v"
       ]
@@ -479,14 +479,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 47,
+      "execution_count": 49,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 472
         },
         "id": "yfzVBxynNjB8",
-        "outputId": "93cc8f37-e4a5-4948-cd12-b0842f35cb5f"
+        "outputId": "ab49fd15-56df-4bc3-a88b-aea4100fec20"
       },
       "outputs": [
         {
@@ -501,12 +501,13 @@
         }
       ],
       "source": [
+        "\n",
         "r0 = [10,0] # set array for r0\n",
         "v0 = [0,0.3] # set array for v0\n",
         "r_mag = 10 # set value for r_mag\n",
         "tmax = 2*np.sqrt(4*np.pi**2*r_mag**3)\n",
-        "# set parameters\n",
-        "N = 400\n",
+        "N = 400 # number of points\n",
+        "# given parameters\n",
         "G = 1\n",
         "M = 1\n",
         "\n",
@@ -537,7 +538,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 51,
       "metadata": {
         "id": "cgXNifzaNjB9"
       },
@@ -559,12 +560,15 @@
         "    for i in range (0, N-1):\n",
         "        # calculate acceleration a[i] based on current position r[i]\n",
         "        a = (-G*M*r[i])/(r_mag**3)\n",
-        "        if method = 'euler': # create if statements for each of the 3 methods\n",
-        "          r[i+1] = r[i]+v[i]*time_step\n",
-        "          v[i+1] = v[i]+a*time_step\n",
-        "        if method = 'euler_cromer':\n",
-        "          v(i+1) = v[i]+a*time_step\n",
-        "          r(i+1) = r[i]+v[i]*time_step\n",
+        "        if method == euler: # create if statements for each of the 3 methods\n",
+        "          r[i+1] = r[i] + v[i]*time_step\n",
+        "          v[i+1] = v[i] + a*time_step\n",
+        "        if method == euler_cromer:\n",
+        "          v[i+1] = v[i] + a*time_step\n",
+        "          r[i+1] = r[i] + v[i]*time_step\n",
+        "        if method == verlet:\n",
+        "          r[i+1] = r[i] + v[i]*time_step + (1/2)*a*time_step**2\n",
+        "          v[i+1] = v[i] + 1/2*(a+a)*t_step\n",
         "    # output the solution (arrays for positions and velocities) versus time\n",
         "    return t, r, v"
       ]
